<resources>
    <string name="app_name">Calendar Manager</string>
    <string name="add_event">Add event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_time">Start time (ISO8601)</string>
    <string name="end_time">End time (ISO8601)</string>
    <string name="all_day">All day</string>
    <string name="location">Location</string>
    <string name="color_tag">Color tag</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="event_title_placeholder">Event title</string>

    <!-- Backend base URL (emulator localhost mapping). Can be overridden later by config if needed -->
    <string name="backend_base_url">http://10.0.2.2:3001/</string>
</resources>
