<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventDetailScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocean_background"
    tools:context="org.example.app.ui.events.EventDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/ocean_surface">

        <TextView
            android:id="@+id/title"
            style="@style/Text.Ocean.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_title_placeholder" />

        <TextView
            android:id="@+id/time"
            style="@style/Text.Ocean.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00 - 10:00" />

        <TextView
            android:id="@+id/location"
            style="@style/Text.Ocean.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location" />

        <TextView
            android:id="@+id/description"
            style="@style/Text.Ocean.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description" />

        <Button
            android:id="@+id/btnEdit"
            style="@style/Widget.Ocean.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.Ocean.Button.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>
</ScrollView>
